# src/handlers/question.py
@@ -5,7 +5,6 @@ import logging
 
 def Question(user_uuid, themes, failed, completed):
   conn = DB.connect()
-  print('lool1')
   cur = conn.cursor()
   cur.execute(DB.get_prepared('select_questions'), 
               (user_uuid,
@@ -22,14 +21,17 @@ def Question(user_uuid, themes, failed, completed):
   question = {'uuid': questions[randint(0, len(questions) - 1)]}
 
   cur.execute(DB.get_prepared('select_question'), 
-              (question['uuid']))
+              (question['uuid'],))
   row = cur.fetchone()
+  theme_uuid = row[5]
 
-  logging.getLogger('service').info("WTF???")
-
-  content = json.loads(row['content'])
-
+  content = json.loads(row[2])
   question['title'] = content['title']
   question['answers'] = content['answers']
 
-  return {"question": json.dumps(question)}
+  cur.execute(DB.get_prepared('select_theme'), 
+              (theme_uuid,))
+  row = cur.fetchone()
+  question['theme'] = row[1]
+
+  return {"question": question}
